--- a/styles.css
+++ b/styles.css
@@ -14,10 +14,11 @@ a{
 }
 
 h1{
-    font-size: 10rem;
+    font-size: 10vw;
     margin: 0;
     color: rgba(255, 255, 255, 0.7);
     text-shadow: 0 10px 5px rgba(0, 0, 0, 0.781);
+    max-width: fit-content;
 }
 
 h1:hover{
@@ -28,12 +29,17 @@ h1:hover{
 .place{
     border: 2px solid white;
     padding: 20px;
-    width: 400px;
-    height: 500px;
+    max-width: 400px;
+    min-width: 200px;
+    max-height: 700px;
+    min-height: 400px;
     text-shadow: 0px 0px 5px rgba(0,0,0,0.85);
-    box-shadow: 6px 22px 4px 1px rgba(0,0,0,0.75); ;
+    box-shadow: 6px 22px 4px 1px rgba(0,0,0,0.75); 
+    margin-right: 10px;
    
 }
+
+
 
 .place:hover, .place-img:hover{
     scale: 1.2;
@@ -44,6 +50,10 @@ h1:hover{
     width: 200px;
     height: 200px;
     border-radius: 150px;
+}
+
+#main{
+    width: 100vw;
 }
 
 
@@ -64,12 +74,13 @@ h1:hover{
 
 
 
+
 #map{
     display: flex;
     align-items: center;
     justify-content: center;
     height: 230px;
-    width: 930px;
+    width: 40vw;
     font-size: 3rem;
     background-image: url(map.png);
     background-repeat: no-repeat;
@@ -78,6 +89,10 @@ h1:hover{
     margin: 50px auto;
     border-radius: 200px;
     box-shadow: 6px 22px 4px 1px rgba(0,0,0,0.75);
+}
+
+#map h2{
+    font-size: 3vw;
 }
 
 #map:hover{
@@ -91,8 +106,10 @@ h1:hover{
 #places{
     display: flex;
     justify-content: space-around;
-    height: 100vh;
-    margin-top: 60px;
+    max-height: 700px;
+    margin: 60px 20px;
+    max-width: 100vw;
+    
 }
 
 #acropolis{
@@ -112,8 +129,9 @@ h1:hover{
 
 #footer{
     display: flex;
-    width: 900px;
-    height: 400px;
+    width: 70vw;
+    min-height: 40vw;
+    max-height: 30vh;
     background-color: rgb(13, 13, 146);
     margin: 40px auto;
     padding: 40px  60px;
@@ -131,12 +149,13 @@ h1:hover{
 }
 
 #footer p{
-    margin: 50px;
-    font-size: 1.2rem;
+    margin: 2vw;
+    font-size: 1.8vw;
 }
 
 #profile-img{
-    width: 400px;
+    width: 30vw;
+    height: 30vw;
     border-radius: 200px;
     border: 10px solid rgb(88, 130, 193);
     
